2003-08-11  Jacob Smullyan  <smulloni@smullyan.org>

	* new beta (3.4b4) release cut, to get the security fixes out
	there asap (it was about time anyway).

	* pylibs/AE/Cache.py (_fixPath): now impossible once again to
	escape the docroot.  Thanks for finding this bug (and fix), Jeroen!

	* SkunkWeb/Services/templating/Handler.py (fourOhFourHandler): fix
	for cross-site scripting vulnerability in default 404 page,
	reported by Jeroen van Dongen.

2003-08-11    <smulloni@smullyan.org>

	* SkunkWeb/util/cache_reaper.py.in: now a swpython script,
	and by default finds all the scoped component cache roots and clears them. 

2003-08-11  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/vfs/tarfs.py (TarFS.open): removing "<>".

	* pylibs/vfs/zipfs.py (ZipFS.open): removing "<>".

	* pylibs/formlib/validates.py (check_isbn): removing "<>".

2003-08-07  Frank Tegtmeyer  <fte@fte.to>

	* doc/HowToSendMail.tex: new parts (mail basics, usage patterns)

2003-07-27  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/MailServices.py,
	SkunkWeb/sw.conf.in: patch from Frank Tegtmeyer for MailServices. 

2003-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/api.txt: various changes.

2003-07-24  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/util/cache_reaper.py.in (walk_func): fix for missing
	key file. (conf): added "keyfiles" option.

	* docs/manual/instConfig.txt: fixed some indentation problems in
	the rst source.

2003-07-23  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py: no longer store the full_key in the cached
	component.  Also, whitespace normalization.

2003-07-22  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/util/cache_reaper.py.in: no longer raise exception when
	an OSError occurs.

	* SkunkWeb/Services/sessionHandler/fssession_clean.sh: session
	cleaner script made to work nicely with AE Cache sessions.

	* SkunkWeb/Services/sessionHandler/AECacheSessionStore.py